fixed research nav overlapping main nav

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,11 @@ body {
     padding: 0px;
 }
 
+.page-content {
+  margin: 110px auto;
+  width: 70%;
+}
+
 /* ----------------------------------- 
    layout of Home page 
    ----------------------------------- */
@@ -100,7 +105,7 @@ body {
 
 .main-nav ul {
   list-style-type: none;
-  padding: 14px 15%;
+  padding: 0.8em 15%;
   margin: 0px;
   display: flex;
   justify-content: space-between;
@@ -126,11 +131,6 @@ body {
   color: white;
   font-size: 1em;
   font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.page-content {
-  margin: 110px auto;
-  width: 70%;
 }
 
 a {
@@ -170,8 +170,9 @@ p {
 }
 
 .research-nav {
+  margin-top: 60px;
   position: sticky;
-  top: 0;
+  /* top: 0; */
   background-color: white;
 }
 
@@ -188,7 +189,7 @@ p {
 .research-nav ul li {
   text-decoration: none;
   /* padding: 24px; */
-  padding: 1em 0em;
+  padding: 0.8em 0em;
 }
 
 .research-nav ul li.active{
@@ -199,7 +200,7 @@ p {
   font-size: 1.1em;
   color: black;
   font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 1em 1.4em;
+  padding: 0.8em 1.4em;
 }
 
 /* .research-nav ul li .vl {
@@ -210,6 +211,10 @@ p {
 
 .research-nav hr {
   margin: 0px;
+}
+
+.research-section {
+  scroll-margin-top: 100px;
 }
 
 footer {
